...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginWelcomeStatusActivity">

    <TextView
        android:id="@+id/txtLoginMessage"
        android:layout_width="361dp"
        android:layout_height="270dp"
        android:layout_marginBottom="216dp"
        android:textAlignment="textStart"
        android:textColor="@color/ptc_DkBlue"
        android:textSize="30sp"
...
